--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
 :root {
   --fonte1: 'Source Sans 3', sans-serif;
   --fonte2: 'Roboto', sans-serif;
@@ -5,20 +10,19 @@
   --color-backend: #00C86F;
   --color-mobile: #FFBA05;
   --preto: #000000;
+  --preto-acinzentado: #9E9E9E;
   --branco: #FFFFFF;
   --cinza-claro: #F5F5F5;
+  --cinza-medio: #E5E5E5;
+  --cinza-escuro: #141414;
   --azul: #2271D1;
 }
 
-body {
+html, body {
   margin: 0;
-  font-family: var(--fonte1), var(--fonte2);
-  background-color: rgba(0, 0, 0, 0.9);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: inherit;
 }
